# graph_generation_language

./: .gitignore  .release-plz.toml  Cargo.toml  flake.nix  om.toml  readme.md  test_mixed_numeric.ggl
.github/: pages_index.html
.github/workflows/: ci.yml
crates/ggl/: Cargo.toml  build.rs
crates/ggl/src/: generators.rs
crates/ggl_cli/: Cargo.toml  build_wasm.sh
crates/ggl_cli/src/: main.rs
crates/ggl_client/: Cargo.toml
crates/ggl_client/src/: main.rs
crates/ggl_wasm/: Trunk.toml  index.html
examples/: torus.ggl
src/browser_demo/: examples.js  index.html  index.vue  main.js  package.json
src/chum/: Cargo.toml
src/chum/src/: main.rs
src/chum/tests/: parser_tests.rs
src/cli/: CHANGELOG.md  Cargo.toml
src/client/: CHANGELOG.md  Cargo.toml  Trunk.toml  index.html
src/client/examples/: chemical_reaction.ggl  crystal_lattice.ggl  hpc_network.ggl  neural_network.ggl  protein_network.ggl  quantum_circuit.ggl  social_network.ggl  toroidal_mesh.ggl
src/client/src/: example_tests.rs  graph_visualizer.rs  main.rs  main.scss  monaco_editor.rs
src/examples/: chemical_reaction.ggl  crystal_lattice.ggl  hpc_network.ggl  neural_network.ggl  protein_network.ggl  quantum_circuit.ggl  social_network.ggl  toroidal_mesh.ggl
src/ggl/: Cargo.toml
src/ggl/src/: generators.rs  ggl.pest  lib.rs  parser.rs  rules.rs  types.rs
src/ggl/tests/: generator_tests.rs  parser_tests.rs  rule_tests.rs
src/ggl_cli/: Cargo.toml
src/ggl_cli/src/: main.rs
src/ggl_client/: CHANGELOG.md  Cargo.toml
src/ggl_client/src/: main.rs
src/ggl_wasm/: Cargo.toml
src/ggl_wasm/src/: lib.rs
src/lib/: CHANGELOG.md  Cargo.toml
src/lib/src/: generators.rs  ggl.pest  interpreter.rs  lib.rs  parser.rs  rules.rs  types.rs
src/lib/tests/: complex_graph_tests.rs  example_integration_tests.rs  functional_operations_tests.rs  generation_tests.rs  generator_tests.rs  integration_tests.rs  lambda_destructuring_tests.rs  mathematical_operations_tests.rs  mixed_numeric_test.rs  parser_tests.rs  unit_tests.rs  wasm_tests.rs
src/tests/: README.md  generator_tests.rs  integration_tests.rs  parser_tests.rs  rule_tests.rs  wasm_tests.rs
src/wasm/: CHANGELOG.md  Cargo.toml
src/wasm/src/: lib.rs
src/wasm/tests/: wasm_tests.rs
