[workspace]
members = [
  "src/lib",
  "src/cli",
  "src/wasm",
]
resolver = "2"

[workspace.package]
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
edition = "2021"
version = "0.0.4"
license = "MIT"
repository = "https://github.com/ocasazza/graph_generation_language"
homepage = "https://ocasazza.github.io/graph_generation_language/"
documentation = "https://ocasazza.github.io/graph_generation_language/"
readme = "readme.md"
keywords = ["graph", "dsl", "wasm", "javascript", "typescript"]

[workspace.metadata.crane]
name = "ggl"
version = "0.0.3"
