[package]
name = "chum"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
description = ""



[dependencies]
# The core dependency for building the parser.
# The "ariadne" feature enables the pretty, colorful error reporting.
chumsky = "0.10.1"
# serde_json = "1.0"
# pest = "2.8"
# pest_derive = "2.8"
# rand = { version = "0.9.2", features = ["small_rng"] }
# getrandom = { version = "0.3.3" }
# serde = { version = "1.0.219", features = ["derive"] }
