[package]
name = "ggl_cli"
version.workspace = true
edition.workspace = true
license.workspace = true

description = "Command-line interface for the Graph Generation Language (GGL)"

[[bin]]
name = "ggl"

[dependencies]
graph_generation_language = { path = "../lib", version = "0.0.3"  }
clap = { version = "4.3.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
