[package]
name = "ggl_client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
graph_generation_language = { path = "../lib" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "Text"] }

# more complex frontend dependencies
# yew = { version = "0.21", features = ["csr"] }
# gloo = "0.11.0"
