[package]
name = "ggl_client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Frontend client for graph_generation_language"

[dependencies]
graph_generation_language = { path = "../lib", version = "0.0.4"  }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "HtmlElement", "Text", "console"] }
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11.0"
js-sys = "0.3.69"
serde_json = "1.0"
