[package]
name = "ggl"
authors = ["Olive Casazza <olive.casazza@schrodinger.com>"]
edition = "2021"
version = "0.0.3"
license = "MIT"
repository = "https://github.com/ocasazza/graph_generation_language"
homepage = "https://ocasazza.github.io/graph_generation_language/"
documentation = "https://ocasazza.github.io/graph_generation_language/"
description = "A domain-specific language for creating and manipulating graphs through declarative syntax."
readme = "../../readme.md"
keywords = ["graph", "dsl", "wasm", "javascript", "typescript"]

[dependencies]
serde_json = "1.0"
pest = "2.8"
pest_derive = "2.8"
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"]}
serde = { version = "1.0.219", features = ["derive"] }
