[package]
name = "ggl_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
ggl = { path = "../ggl" }
serde_json = "1.0.140"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["console"]}
