[package]
name = "graph_generation_language"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
description = "Core library for the Graph Generation Language (GGL)"
include = ["src/**/*", "ggl.pest"]

[dependencies]
serde_json = "1.0"
pest = "2.8"
pest_derive = "2.8"
fastrand = "2.0"
serde = { version = "1.0.219", features = ["derive"] }
