[package]
name = "ggl_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for graph_generation_language"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
graph_generation_language = { path = "../lib", version = "0.0.5" }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.77", features = ["console"]}
